tests/ui/fail/nn32_nan.rs
use ordered_float_macros::nn32;

fn main() {
    let _ = nn32!(f32::NAN);
}
